# isaac-rh56dfx

./: .gitignore  README.md  generate_urdf.sh  pyproject.toml
data/config/: rh56dfx_physics.toml
data/urdf/: rh56dfx_left.urdf  rh56dfx_right.urdf
docker/: isaaclab.mount.yaml
src/isaaclab_rh56dfx/: __init__.py
src/isaaclab_rh56dfx/actuators/: __init__.py  delayed_dc_motor.py
src/isaaclab_rh56dfx/mdp/actions/: __init__.py  rh56dfx_mimic_actions.py
src/isaaclab_rh56dfx/robots/: __init__.py  rh56dfx.py
src/isaaclab_rh56dfx/scripts/: __init__.py  build_usd.py  list_envs.py  random_agent.py
src/isaaclab_rh56dfx/tasks/: __init__.py
src/isaaclab_rh56dfx/tasks/play/: __init__.py  base_env_cfg.py  joint_pos_env_cfg.py
tools/: generate_urdf.py
